--- a/Gizmo.Client.UI.Resources/Properties/Resources.resx
+++ b/Gizmo.Client.UI.Resources/Properties/Resources.resx
@@ -891,7 +891,7 @@
   <data name="GIZ_GEN_ERROR" xml:space="preserve">
     <value>Error</value>
   </data>
-  <data name="GIZ_INSUFFICIENT_POINTS_MESSAGE" xml:space="preserve">
+  <data name="GIZ_INSUFFICIENT_POINTS_ERROR_MESSAGE" xml:space="preserve">
     <value>Insufficient points.</value>
   </data>
   <data name="GIZ_GEN_PAYMENT_METHOD_POINTS" xml:space="preserve">
@@ -1148,5 +1148,11 @@
   </data>
   <data name="GIZ_INSUFFICIENT_DEPOSITS_MESSAGE" xml:space="preserve">
     <value>You don't have enough deposits to make this order.</value>
+  </data>
+  <data name="GIZ_INSUFFICIENT_POINTS_ERROR_TITLE" xml:space="preserve">
+    <value>Error</value>
+  </data>
+  <data name="PRODUCT_ORDER_PASS_RESULT_ERROR_TITLE" xml:space="preserve">
+    <value>Error</value>
   </data>
 </root>
