--- a/Gizmo.Client.UI.Resources/Properties/Resources.resx
+++ b/Gizmo.Client.UI.Resources/Properties/Resources.resx
@@ -1191,4 +1191,13 @@
   <data name="GIZ_LOGIN_RESULT_SUCESS" xml:space="preserve">
     <value>Success</value>
   </data>
+  <data name="GIZ_USAGE_TYPE_RATE" xml:space="preserve">
+    <value>Rate</value>
+  </data>
+  <data name="GIZ_USAGE_TYPE_TIME_FIXED" xml:space="preserve">
+    <value>Fixed time</value>
+  </data>
+  <data name="GIZ_USAGE_TYPE_TIME_PRODUCT" xml:space="preserve">
+    <value>Time product</value>
+  </data>
 </root>
