--- a/Gizmo.Client.UI.Resources/Properties/Resources.resx
+++ b/Gizmo.Client.UI.Resources/Properties/Resources.resx
@@ -1200,4 +1200,7 @@
   <data name="GIZ_USAGE_TYPE_TIME_PRODUCT" xml:space="preserve">
     <value>Time product</value>
   </data>
+  <data name="GIZ_REGISTRATION_EMAIL_CONFIRMATION_MESSAGE" xml:space="preserve">
+    <value>Please enter your e-mail to create an account.</value>
+  </data>
 </root>
