--- a/Gizmo.Client.UI.Resources/Properties/Resources.resx
+++ b/Gizmo.Client.UI.Resources/Properties/Resources.resx
@@ -459,7 +459,7 @@
   <data name="GIZ_PASSWORD_RECOVERY_SET_PASSWORD_MESSAGE" xml:space="preserve">
     <value>Great! Now come up with a new password and you're all set</value>
   </data>
-  <data name="GIZ_PASSWORD_RULE_LENGTH" xml:space="preserve">
+  <data name="GIZ_PASSWORD_RULE_RANGE_LENGTH" xml:space="preserve">
     <value>{0}-{1} characters</value>
   </data>
   <data name="GIZ_PASSWORD_RULE_LOWER_CASE" xml:space="preserve">
@@ -1211,5 +1211,11 @@
   </data>
   <data name="GIZ_SYSTEM_OUT_OF_ORDER" xml:space="preserve">
     <value>Out of Order</value>
+  </data>
+  <data name="GIZ_PASSWORD_RULE_MAX_LENGTH" xml:space="preserve">
+    <value>Maximum {0} characters</value>
+  </data>
+  <data name="GIZ_PASSWORD_RULE_MIN_LENGTH" xml:space="preserve">
+    <value>Minimum {0} characters</value>
   </data>
 </root>
