--- a/Gizmo.Client.UI.Resources/Properties/Resources.resx
+++ b/Gizmo.Client.UI.Resources/Properties/Resources.resx
@@ -1218,4 +1218,7 @@
   <data name="GIZ_PASSWORD_RULE_MIN_LENGTH" xml:space="preserve">
     <value>Minimum {0} characters</value>
   </data>
+  <data name="GIZ_PASSWORD_MESSAGE_TOO_LONG" xml:space="preserve">
+    <value>Password is too long</value>
+  </data>
 </root>
