--- a/Gizmo.Client.UI.Resources/Properties/Resources.en-US.resx
+++ b/Gizmo.Client.UI.Resources/Properties/Resources.en-US.resx
@@ -4,9 +4,9 @@
   Loco xml export: ResX - .NET resources
   Project: Gizmo Client UI
   Release: Working copy
-  Locale: en-GR, English (Greece)
+  Locale: en-US, English
   Exported by: Oleg Savelos
-  Exported at: Fri, 07 Jul 2023 11:37:23 +0300 
+  Exported at: Fri, 07 Jul 2023 11:52:26 +0300 
   --> 
   <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
     <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
@@ -67,10 +67,10 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <metadata name="locoLocaleCode">
-    <value>en-GR</value>
+    <value>en-US</value>
   </metadata>
   <metadata name="locoLocaleName" xml:space="preserve">
-    <value>English (Greece)</value>
+    <value>English</value>
   </metadata> 
   <data name="GIZ_APP_FILTERS_ALL_GAMES_AND_APPS" xml:space="preserve"> 
     <value>All games and apps</value> 
