--- a/Gizmo.Client.UI.Resources/Properties/Resources.tr-TR.resx
+++ b/Gizmo.Client.UI.Resources/Properties/Resources.tr-TR.resx
@@ -4,9 +4,9 @@
   Loco xml export: ResX - .NET resources
   Project: Gizmo Client UI
   Release: Working copy
-  Locale: tr, Turkish
+  Locale: tr-TR, Turkish
   Exported by: Oleg Savelos
-  Exported at: Fri, 07 Jul 2023 11:38:08 +0300 
+  Exported at: Fri, 07 Jul 2023 11:52:31 +0300 
   --> 
   <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
     <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
@@ -67,7 +67,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <metadata name="locoLocaleCode">
-    <value>tr</value>
+    <value>tr-TR</value>
   </metadata>
   <metadata name="locoLocaleName" xml:space="preserve">
     <value>Turkish</value>
