--- a/Gizmo.Client.UI.Resources/Properties/Resources.pt-BR.resx
+++ b/Gizmo.Client.UI.Resources/Properties/Resources.pt-BR.resx
@@ -6,7 +6,7 @@
   Release: Working copy
   Locale: pt-BR, Brazilian Portuguese
   Exported by: Oleg Savelos
-  Exported at: Mon, 10 Jul 2023 11:10:51 +0300 
+  Exported at: Tue, 11 Jul 2023 18:39:13 +0300 
   --> 
   <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
     <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
@@ -669,12 +669,6 @@
   <data name="GIZ_MODULE_PAGE_SHOP_TITLE" xml:space="preserve"> 
     <value>Loja</value> 
   </data> 
-  <data name="GIZ_MODULE_PAGE_VALIDATION_DESCRIPTION" xml:space="preserve"> 
-    <value>Faça alguma validação</value> 
-  </data> 
-  <data name="GIZ_MODULE_PAGE_VALIDATION_TITLE" xml:space="preserve"> 
-    <value>Validação</value> 
-  </data> 
   <data name="GIZ_USER_PURCHASES_ORDER_STATUS_ACCEPTED" xml:space="preserve"> 
     <value>Aceito</value> 
   </data> 
@@ -1233,5 +1227,56 @@ Por favor, recarregue sua conta agora.</value>
   </data> 
   <data name="GIZ_USER_PURCHASES_PAYMENT_STATUS" xml:space="preserve"> 
     <value>Status do pagamento</value> 
+  </data> 
+  <data name="GIZ_CLIENT_MANAGER_LOGIN_ATTEMPTS" xml:space="preserve"> 
+    <value>Tentativas de Login</value> 
+  </data> 
+  <data name="GIZ_CLIENT_MANAGER_PASSWORD" xml:space="preserve"> 
+    <value>Senha do Administrador</value> 
+  </data> 
+  <data name="GIZ_CLIENT_MANAGER_ACCEPT" xml:space="preserve"> 
+    <value>Aceitar</value> 
+  </data> 
+  <data name="GIZ_CLIENT_MANAGER_SWITCH_SHELL" xml:space="preserve"> 
+    <value>Alterar interface</value> 
+  </data> 
+  <data name="GIZ_CLIENT_MANAGER_SWITCH_SHELL_MESSAGE" xml:space="preserve"> 
+    <value>Alernar para a interface do sistema padrão sem encerrar o módulo cliente.</value> 
+  </data> 
+  <data name="GIZ_CLIENT_MANAGER_DEACTIVATE" xml:space="preserve"> 
+    <value>Desativar</value> 
+  </data> 
+  <data name="GIZ_CLIENT_MANAGER_DEACTIVATE_MESSAGE" xml:space="preserve"> 
+    <value>Desativar o módulo do cliente</value> 
+  </data> 
+  <data name="GIZ_CLIENT_MANAGER_UNINSTALL" xml:space="preserve"> 
+    <value>Desinstalar Cliente</value> 
+  </data> 
+  <data name="GIZ_CLIENT_MANAGER_UNINSTALL_MESSAGE" xml:space="preserve"> 
+    <value>Remova o cliente do sistema e apague qualquer configuração.</value> 
+  </data> 
+  <data name="GIZ_CLIENT_MANAGER_CANCEL" xml:space="preserve"> 
+    <value>Cancelar</value> 
+  </data> 
+  <data name="GIZ_SMA_STARTING_UI" xml:space="preserve"> 
+    <value>Iniciando a interface do usuário</value> 
+  </data> 
+  <data name="GIZ_SMA_INITIATING_CONNECTION" xml:space="preserve"> 
+    <value>Inicializando a conexão com o servidor</value> 
+  </data> 
+  <data name="GIZ_SMA_CHECKING_DRIVER" xml:space="preserve"> 
+    <value>Verificando os drivers do sistema</value> 
+  </data> 
+  <data name="GIZ_SMA_PROCESSING_TASKS" xml:space="preserve"> 
+    <value>Processando tarefas</value> 
+  </data> 
+  <data name="GIZ_SMA_INITIALIZING_PLUGINS" xml:space="preserve"> 
+    <value>Inicializando plug-ins</value> 
+  </data> 
+  <data name="GIZ_SMA_RESOLVING_SERVER_IP" xml:space="preserve"> 
+    <value>Resolvendo o IP do terminal no servidor</value> 
+  </data> 
+  <data name="GIZ_SMA_PROCESSING_DRIVE_MAPPINGS" xml:space="preserve"> 
+    <value>Processando o mapa de unidades</value> 
   </data> 
 </root>
