--- a/Gizmo.Client.UI.Resources/Properties/Resources.el-gr.resx
+++ b/Gizmo.Client.UI.Resources/Properties/Resources.el-gr.resx
@@ -6,7 +6,7 @@
   Release: Working copy
   Locale: el-GR, Greek (Greece)
   Exported by: Dimitrios Klapsis
-  Exported at: Tue, 11 Jul 2023 13:19:52 +0300 
+  Exported at: Thu, 13 Jul 2023 13:19:46 +0300 
   --> 
   <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
     <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
@@ -244,7 +244,7 @@
     <value>Επαλήθευση</value> 
   </data> 
   <data name="GIZ_GEN_CONFIRM_PASSWORD" xml:space="preserve"> 
-    <value>Επαληθεύστε τον κωδικό σας</value> 
+    <value>Επαληθεύστε τον κωδικό</value> 
   </data> 
   <data name="GIZ_GEN_CONTINUE" xml:space="preserve"> 
     <value>Συνέχεια</value> 
@@ -382,7 +382,7 @@
     <value>Δεν βρέθηκαν αποτελέσματα για</value> 
   </data> 
   <data name="GIZ_GLOBAL_SEARCH_NO_MATCH_FOUND_MESSAGE" xml:space="preserve"> 
-    <value /> 
+    <value>Δοκιμάστε να σχηματίστε διαφορετικά την αναζήτηση σας</value> 
   </data> 
   <data name="GIZ_PASSWORD_MESSAGE_SECURE" xml:space="preserve"> 
     <value>Ασφαλής κωδικός</value> 
@@ -412,7 +412,7 @@
     <value>Επαναφορά κωδικού</value> 
   </data> 
   <data name="GIZ_PASSWORD_RECOVERY_SET_PASSWORD_MESSAGE" xml:space="preserve"> 
-    <value /> 
+    <value>Τέλεια! Τώρα ορίστε νέο κωδικό και είναι έτοιμο</value> 
   </data> 
   <data name="GIZ_PASSWORD_RULE_RANGE_LENGTH" xml:space="preserve"> 
     <value>{0}-{1} χαρακτήρες</value> 
@@ -464,9 +464,6 @@
   </data> 
   <data name="GIZ_SHOP_CHECKOUT_COMPLETE_NOTE" xml:space="preserve"> 
     <value>Σημείωση: Μπορείτε να δείτε όλες τις παραγγελίες σας στο προφίλ μου &gt; αγορές</value> 
-  </data> 
-  <data name="GIZ_SHOP_CHECKOUT_MESSAGE" xml:space="preserve"> 
-    <value /> 
   </data> 
   <data name="GIZ_SHOP_CHECKOUT_TITLE" xml:space="preserve"> 
     <value>Ολοκλήρωση Αγοράς</value> 
@@ -876,23 +873,17 @@
   <data name="GIZ_USER_PURCHASES_HISTORY" xml:space="preserve"> 
     <value>Ιστορικό Αγορών</value> 
   </data> 
-  <data name="GIZ_GEN_OF" xml:space="preserve"> 
-    <value /> 
-  </data> 
   <data name="GIZ_PRODUCT_TIME_EXPIRATION_ACTION_TIME" xml:space="preserve"> 
     <value>Χρόνος χρήσης</value> 
-  </data> 
-  <data name="GIZ_PRODUCT_TIME_EXPIRATION_AFTER" xml:space="preserve"> 
-    <value>μετά από</value> 
   </data> 
   <data name="GIZ_PRODUCT_TIME_EXPIRATION_AFTER_LOGOUT" xml:space="preserve"> 
     <value>μετά από αποσύνδεση</value> 
   </data> 
   <data name="GIZ_PRODUCT_TIME_EXPIRATION_AFTER_PURCHASE" xml:space="preserve"> 
-    <value>αγορά</value> 
+    <value>από αγορά</value> 
   </data> 
   <data name="GIZ_PRODUCT_TIME_EXPIRATION_AFTER_USE" xml:space="preserve"> 
-    <value>χρήσης</value> 
+    <value>από χρήση</value> 
   </data> 
   <data name="GIZ_PRODUCT_TIME_EXPIRATION_BUYING_TIME" xml:space="preserve"> 
     <value>Χρόνος αγοράς</value> 
@@ -909,9 +900,6 @@
   <data name="GIZ_PRODUCT_TIME_EXPIRATION_HOURS_ABBREVIATED" xml:space="preserve"> 
     <value>ω.</value> 
   </data> 
-  <data name="GIZ_PRODUCT_TIME_EXPIRATION_LOGOUT" xml:space="preserve"> 
-    <value>αποσύνδεση</value> 
-  </data> 
   <data name="GIZ_PRODUCT_TIME_EXPIRATION_MINUTE_ABBREVIATED" xml:space="preserve"> 
     <value>λ.</value> 
   </data> 
@@ -920,9 +908,6 @@
   </data> 
   <data name="GIZ_PRODUCT_TIME_MINUTES_ABBREVIATED" xml:space="preserve"> 
     <value>λεπτά</value> 
-  </data> 
-  <data name="GIZ_PRODUCT_TIME_EXPIRES_AFTER" xml:space="preserve"> 
-    <value>Λήγει μετά</value> 
   </data> 
   <data name="GIZ_GEN_PIECES_ABBREVIATED" xml:space="preserve"> 
     <value>τμχ.</value> 
@@ -1003,7 +988,7 @@
     <value>Το πεδίο κωδικός επαλήθευσης είναι υποχρεωτικό.</value> 
   </data> 
   <data name="GIZ_USER_AGREEMENT_DIALOG_TITLE" xml:space="preserve"> 
-    <value /> 
+    <value>Πολιτική Απορρήτου και Όροι Χρήσης</value> 
   </data> 
   <data name="GIZ_USER_LOCK_SCREEN_INCORRECT_PIN" xml:space="preserve"> 
     <value>Λάθος PIN</value> 
@@ -1142,7 +1127,7 @@
     <value>Επιτυχία</value> 
   </data> 
   <data name="GIZ_USAGE_TYPE_RATE" xml:space="preserve"> 
-    <value /> 
+    <value>Προφίλ χρέωσης</value> 
   </data> 
   <data name="GIZ_USAGE_TYPE_TIME_FIXED" xml:space="preserve"> 
     <value>Προπληρωμένος χρόνος</value> 
@@ -1278,5 +1263,8 @@
   </data> 
   <data name="GIZ_SMA_PROCESSING_DRIVE_MAPPINGS" xml:space="preserve"> 
     <value>Επεξεργασία δικτυακών δίσκων</value> 
+  </data> 
+  <data name="GIZ_USER_AGREEMENT_DIALOG_AGREE_CHECKBOX" xml:space="preserve"> 
+    <value>Έχω διαβάσει και αποδέχομαι τους όρους χρήσης.</value> 
   </data> 
 </root>
